tools/sddl2/assembler/tests/fail/push_u32_overflow.asm
# EXPECT-ERROR: out of range
push.u32 4294967296
halt
